// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleDetailsGroup renders, no details 1`] = `
<div
  className="rule-details-group"
>
  <RuleDetails
    deps={Object {}}
    outcomeType="pass"
    rule={
      Object {
        "id": "1",
      }
    }
  />
  <RuleDetails
    deps={Object {}}
    outcomeType="pass"
    rule={
      Object {
        "id": "2",
      }
    }
  />
  <RuleDetails
    deps={Object {}}
    outcomeType="pass"
    rule={
      Object {
        "id": "3",
      }
    }
  />
</div>
`;

exports[`RuleDetailsGroup renders, with details 1`] = `
<div
  className="rule-details-group"
>
  <CollapsibleContainer
    buttonAriaLabel="show failed instance list"
    containerClassName="collapsible-rule-details-group"
    detailsContent={
      <InstanceDetailsGroup
        nodeResults={
          Array [
            Object {
              "failureSummary": "fix the error on html tag",
              "html": "<html>",
              "snippet": "<html>",
            },
          ]
        }
      />
    }
    id="1"
    summaryContent={
      <RuleDetails
        deps={Object {}}
        isHeader={false}
        outcomeType="pass"
        rule={
          Object {
            "id": "1",
            "nodes": Array [
              Object {
                "failureSummary": "fix the error on html tag",
                "html": "<html>",
                "snippet": "<html>",
              },
            ],
          }
        }
      />
    }
    titleHeadingLevel={3}
  />
</div>
`;
